--- a/app/assets/stylesheets/followfriday.css
+++ b/app/assets/stylesheets/followfriday.css
@@ -5,8 +5,7 @@
 
 .followFridayContent{}
 
-#tweetformwrapper{
-}
+#tweetformwrapper{}
 
 .friend > *{
   max-width: 100%;
@@ -18,22 +17,39 @@
 }
 
 .friend{
+  width: 260px;
+  height: 130px;
+  margin: 0px 3px 0px 3px;
+  padding: 5px;
   position: relative;
   font-size: 20px;
   display: inline-block;
-  width: 300px;
-  height: 250px;
   text-align: center;
-  padding: 5px;
-  margin: 2px;
 }
 
 .friendAvatar{
   position: absolute;
-  top: 100px;
+  top: 20px;
   left: 20px;
   border: 2px solid;
   border-radius: 25px;
+}
+
+.screenName{
+  position: absolute;
+  top: 80px;
+  width: 260px;
+  background-color: black;
+  opacity: 60%;
+  padding: 0;
+}
+.name{
+  position: absolute;
+  top: 110px;
+  width: 260px;
+  background-color: black;
+  opacity: 60%;
+  padding: 0;
 }
 
 .selected{
