--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,31 +7,14 @@
     <meta name="description" content="386 Twitter Version">
     <meta name="author" content="Jabawack81">
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <%= csrf_meta_tags %>
 
 <%= render 'layouts/icon' %>
   </head>
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand"><%=t :webapp_title %></a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="<%= params[:controller] == 'welcome' ? 'active' : '' %>"><a href="<%= root_path %>">Home</a></li>
-              <li class="<%= params[:controller] == 'followfriday' ? 'active' : '' %>"><a href="<%= followfriday_path %>">Follow Friday</a></li>
-              <li><a href="<%= contact_path %>">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+<%= render 'layouts/menubar' %>
 
       <%= yield %>
 
