--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
+Hi to start to build your #FF tweet please login <br>
+
 <a class='btn btn-primary btn-large' href='/auth/twitter/'>Login with twiter</a>
